--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.ionic.starter">
+    >
 
     <!-- Permissions must be direct children of manifest -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -16,6 +16,11 @@
     <uses-permission android:name="android.permission.MANAGE_OWN_CALLS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_PHONE_CALL" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+
+
 
     <!-- Required so Android considers your app as a dialer candidate -->
     <uses-feature android:name="android.software.connectionservice" android:required="true" />
@@ -30,6 +35,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <uses-library android:name="android.test.runner" android:required="false" />
+
 
         <!-- ConnectionService -->
         <service
@@ -41,6 +48,7 @@
                 <action android:name="android.telecom.ConnectionService" />
             </intent-filter>
         </service>
+        
 
         <service android:name=".MyInCallService"
          android:permission="android.permission.BIND_INCALL_SERVICE"
@@ -54,10 +62,11 @@
         </service>
 
         <!-- Optional CallRecorder service -->
-<!--        <service-->
-<!--            android:name="io.ionic.starter.CallRecorderService"-->
-<!--            android:foregroundServiceType="microphone|phoneCall"-->
-<!--            android:exported="false" />-->
+       <service
+           android:name=".CallRecorderService"
+           android:foregroundServiceType="microphone|phoneCall"
+            android:enabled="true"
+           android:exported="false" />
 
         <!-- Optional CallScreeningService -->
         <service
@@ -111,6 +120,16 @@
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name=".InCallActivity"
+            android:launchMode="singleTask"
+            android:excludeFromRecents="true"
+            android:theme="@style/AppTheme.NoActionBarFullScreen"
+            android:showOnLockScreen="true"
+            android:turnScreenOn="true"
+            android:exported="true" />
+
 
         <!-- FileProvider -->
         <provider
