--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "build.android": "ionic cap build android"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
