Changes for the get call history - WIP

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "test.unit": "vitest",
     "lint": "eslint",
     "build.android": "ionic cap build android",
-    "sync.android": "ionic cap sync android",
-    "run.android": "ionic cap run android",
-    "live.android": "ionic cap run android"
+    "run.android": "ionic cap run android"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
